# support-ticket-triage-ai

./: .env.example  .gitignore  AI_Engineer_-_Code_Homework_Test.txt  README.md  WRITEUP.md  app.py  main.py  pyproject.toml
data/: __init__.py  agent_availability.json  billing_transactions.json  customers.json  customers.py  health_metrics.json  knowledge_base.json  knowledge_base.py  sla_status.json  system_status.json  ticket_history.json
data/knowledge_base/: billing_payment_failed_during_plan_upgrade.txt  billing_plan_upgrade_and_downgrade_guide.txt  billing_understanding_pending_charges_and_refunds.txt  features_dark_mode_setup_and_troubleshooting.txt  features_feature_requests_and_roadmap.txt  features_pro_plan_feature_list.txt  system_error_500_internal_server_error_troubleshooting.txt  system_multi_user_access_troubleshooting.txt  system_regional_service_status_and_outage_information.txt
eval/: __init__.py  eval_runner.py  golden_dataset.py
scripts/: ingest_kb.py
tests/: __init__.py  test_all_tools.py  test_customer_history.py  test_embeddings.py  test_knowledge_base.py
triage_agent/: __init__.py  agent.py  models.py  prompts.py  sample_tickets.py
triage_agent/.adk/: session.db
triage_agent/tools/: __init__.py  agent_availability.py  billing_lookup.py  customer_history.py  health_score.py  knowledge_base.py  sla_status.py  system_status.py  ticket_history.py
triage_agent/tools/context/: __init__.py  customer_history.py  health_score.py  sla_status.py  ticket_history.py
triage_agent/tools/operational/: __init__.py  billing_lookup.py  (+1 more)
(+5 files in other folders)
